[gd_scene load_steps=33 format=2]

[ext_resource path="res://combat3/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://combat/art/bleeding.png" type="Texture" id=2]
[ext_resource path="res://combat/art/background-box.png" type="Texture" id=3]
[ext_resource path="res://Scene/PlayerLife.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/-1.tscn" type="PackedScene" id=5]
[ext_resource path="res://combat3/BulletSpawner3.gd" type="Script" id=6]
[ext_resource path="res://combat3/PlayerLifeBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene/Life.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scene/-20.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scene/-10.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scene/Weapon_magazine.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scene/Popup_lose.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scene/Popup_win.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scene/Weapon_hair_dye.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scene/Weapon_report.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scene/Weapon_b_gift.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scene/-30.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scene/-40.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scripts/CombatWorld.gd" type="Script" id=19]
[ext_resource path="res://combat/sound/specialattack.wav" type="AudioStream" id=20]
[ext_resource path="res://combat/sound/bullet.wav" type="AudioStream" id=21]
[ext_resource path="res://newpixel.tres" type="DynamicFont" id=22]
[ext_resource path="res://Scripts/-1.gd" type="Script" id=23]
[ext_resource path="res://new_dynamicfontmiddle.tres" type="DynamicFont" id=24]
[ext_resource path="res://combat3/Enemy.tscn" type="PackedScene" id=25]
[ext_resource path="res://combat3/Walls.gd" type="Script" id=26]
[ext_resource path="res://combat3/ExtraLives.gd" type="Script" id=27]
[ext_resource path="res://combat2/Player2.gd" type="Script" id=28]
[ext_resource path="res://combat2/ExtraPoints.gd" type="Script" id=29]
[ext_resource path="res://combat2/Popup_lose.gd" type="Script" id=30]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 598.828, 10 )

[sub_resource type="Theme" id=2]

[node name="World" type="Node2D"]
position = Vector2( 80.2883, 8.55224 )
scale = Vector2( 0.15, 0.15 )
script = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -531.0
margin_top = -54.0
margin_right = 1061.0
margin_bottom = 840.0
color = Color( 0.705882, 0.698039, 0.698039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource( 26 )

[node name="Ground" type="Sprite" parent="Walls"]
position = Vector2( 244.042, 431.857 )
scale = Vector2( 0.277398, 0.826368 )
z_index = -1
texture = ExtResource( 3 )

[node name="ColorRect2" type="ColorRect" parent="Walls"]
margin_left = -182.0
margin_top = 219.0
margin_right = 692.0
margin_bottom = 737.0
color = Color( 0.552941, 0.52549, 0.466667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="CollisionShape2D" parent="Walls"]
position = Vector2( 356.915, 733.746 )
shape = SubResource( 1 )

[node name="Top" type="CollisionShape2D" parent="Walls"]
light_mask = 0
position = Vector2( 312.815, 216.608 )
shape = SubResource( 1 )

[node name="Left" type="CollisionShape2D" parent="Walls"]
position = Vector2( -191.096, 584.643 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Right" type="CollisionShape2D" parent="Walls"]
position = Vector2( 700.505, 626.098 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="wall2" type="StaticBody2D" parent="."]
collision_layer = 16

[node name="top" type="CollisionShape2D" parent="wall2"]
light_mask = 0
position = Vector2( 312.295, 379.57 )
shape = SubResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 93.6702, 479.292 )
script = ExtResource( 28 )

[node name="AddLife" type="Label" parent="YSort/Player"]
visible = false
modulate = Color( 0.34902, 0.180392, 0.180392, 1 )
margin_left = 46.6667
margin_top = -73.3333
margin_right = 88.6667
margin_bottom = -59.3333
rect_scale = Vector2( 3, 3 )
text = "+ 1 HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="YSort/Player/AddLife"]
wait_time = 0.5

[node name="AddPoints" type="Label" parent="YSort/Player"]
visible = false
modulate = Color( 0.72549, 0.14902, 0.14902, 1 )
margin_left = 46.3296
margin_top = -85.9586
margin_right = 104.33
margin_bottom = -65.9586
rect_scale = Vector2( 3, 3 )
custom_fonts/font = ExtResource( 24 )
text = "+ 1 Point"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="YSort/Player/AddPoints"]
wait_time = 0.3

[node name="PlayerLife" parent="YSort/Player" instance=ExtResource( 8 )]

[node name="BulletAudio" type="AudioStreamPlayer2D" parent="YSort/Player"]
position = Vector2( 487.285, 1425.05 )
scale = Vector2( 0.8, 0.8 )
stream = ExtResource( 21 )

[node name="SpecialAudio" type="AudioStreamPlayer2D" parent="YSort/Player"]
position = Vector2( 487.285, 1425.05 )
scale = Vector2( 0.8, 0.8 )
stream = ExtResource( 20 )

[node name="Enemy" parent="YSort" instance=ExtResource( 25 )]
position = Vector2( 253.333, 233.333 )
scale = Vector2( 1.5, 1.5 )
collision_layer = 15

[node name="Bleeding2" type="Sprite" parent="YSort/Enemy"]
visible = false
position = Vector2( 1.65826, -29.295 )
scale = Vector2( 0.697516, 0.802545 )
texture = ExtResource( 2 )
hframes = 4

[node name="EnemyLife" parent="YSort/Enemy" instance=ExtResource( 8 )]

[node name="BulletSpawner" type="Node2D" parent="YSort/Enemy"]
position = Vector2( 1.45929, 2.67384 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="YSort/Enemy/BulletSpawner"]
wait_time = 0.1

[node name="Bleeding3" type="AnimationPlayer" parent="YSort/Enemy"]

[node name="-1" parent="YSort/Enemy" instance=ExtResource( 5 )]
visible = false
position = Vector2( -126.63, -50.5361 )
script = ExtResource( 23 )

[node name="-10" parent="YSort/Enemy" instance=ExtResource( 10 )]
visible = false
position = Vector2( -127.307, -52.5753 )

[node name="-20" parent="YSort/Enemy" instance=ExtResource( 9 )]
visible = false
position = Vector2( -127.307, -51.346 )

[node name="-30" parent="YSort/Enemy" instance=ExtResource( 17 )]
visible = false
position = Vector2( -127.357, -51.9445 )

[node name="-40" parent="YSort/Enemy" instance=ExtResource( 18 )]
visible = false
position = Vector2( -128.907, -52.2194 )

[node name="PlayerPoints" type="Label" parent="."]
visible = false
modulate = Color( 0.180392, 0.0705882, 0.0705882, 1 )
margin_left = -186.33
margin_top = -0.70858
margin_right = -84.3297
margin_bottom = 33.2914
rect_scale = Vector2( 3, 3 )
custom_fonts/font = ExtResource( 24 )
text = "Player Points: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
modulate = Color( 0.815686, 0.180392, 0.180392, 1 )
margin_left = 444.0
margin_top = -19.6666
margin_right = 527.0
margin_bottom = 0.33342
rect_scale = Vector2( 3, 3 )
custom_fonts/font = ExtResource( 22 )
text = "SCORE: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" parent="." instance=ExtResource( 7 )]
margin_left = 445.667
margin_top = 40.0
margin_right = 678.667
margin_bottom = 65.0

[node name="Bag" type="CenterContainer" parent="."]
visible = false
margin_left = 410.0
margin_top = 133.333
margin_right = 530.0
margin_bottom = 677.333
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="Bag"]
margin_left = 60.0
margin_top = 92.0
margin_right = 60.0
margin_bottom = 452.0
custom_constants/vseparation = 120
custom_constants/hseparation = 100

[node name="Magazine" parent="Bag/Grid" instance=ExtResource( 11 )]
margin_right = 0.0
margin_bottom = 0.0

[node name="Gift" parent="Bag/Grid" instance=ExtResource( 16 )]
margin_top = 120.0
margin_right = 0.0
margin_bottom = 120.0

[node name="Dye" parent="Bag/Grid" instance=ExtResource( 14 )]
margin_top = 240.0
margin_right = 0.0
margin_bottom = 240.0

[node name="Report" parent="Bag/Grid" instance=ExtResource( 15 )]
margin_top = 360.0
margin_right = 0.0
margin_bottom = 360.0

[node name="PlayerLives" type="Node2D" parent="."]
position = Vector2( -880.001, -226.666 )

[node name="Life2" parent="PlayerLives" instance=ExtResource( 4 )]
position = Vector2( 575.724, 634.674 )
scale = Vector2( 0.7, 0.7 )

[node name="Life5" parent="PlayerLives" instance=ExtResource( 4 )]
position = Vector2( 575.08, 754.727 )
scale = Vector2( 0.7, 0.7 )

[node name="Life6" parent="PlayerLives" instance=ExtResource( 4 )]
position = Vector2( 574.707, 794.271 )
scale = Vector2( 0.7, 0.7 )

[node name="Life7" parent="PlayerLives" instance=ExtResource( 4 )]
position = Vector2( 514.707, 594.271 )
scale = Vector2( 0.7, 0.7 )

[node name="Life8" parent="PlayerLives" instance=ExtResource( 4 )]
position = Vector2( 514.707, 634.271 )
scale = Vector2( 0.7, 0.7 )

[node name="Life9" parent="PlayerLives" instance=ExtResource( 4 )]
position = Vector2( 514.707, 674.27 )
scale = Vector2( 0.7, 0.7 )

[node name="Life10" parent="PlayerLives" instance=ExtResource( 4 )]
position = Vector2( 514.707, 714.269 )
scale = Vector2( 0.7, 0.7 )

[node name="Life11" parent="PlayerLives" instance=ExtResource( 4 )]
position = Vector2( 514.707, 754.268 )
scale = Vector2( 0.7, 0.7 )

[node name="Life12" parent="PlayerLives" instance=ExtResource( 4 )]
position = Vector2( 514.707, 794.267 )
scale = Vector2( 0.7, 0.7 )

[node name="Life1" parent="PlayerLives" instance=ExtResource( 4 )]
position = Vector2( 576.436, 595.147 )
scale = Vector2( 0.7, 0.7 )

[node name="Life3" parent="PlayerLives" instance=ExtResource( 4 )]
position = Vector2( 575.042, 674.333 )
scale = Vector2( 0.7, 0.7 )

[node name="Life4" parent="PlayerLives" instance=ExtResource( 4 )]
position = Vector2( 575.957, 714.669 )
scale = Vector2( 0.7, 0.7 )

[node name="Lose" parent="." instance=ExtResource( 12 )]
visible = false
position = Vector2( -20, 160 )
script = ExtResource( 30 )

[node name="Win" parent="." instance=ExtResource( 13 )]
visible = false
position = Vector2( 186.667, 293.334 )

[node name="Timer" type="Timer" parent="."]
wait_time = 150.0

[node name="Time" type="Label" parent="."]
visible = false
margin_left = -173.333
margin_top = 6.66667
margin_right = -79.3333
margin_bottom = 26.6667
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 24 )
text = "Time Left: 200"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtraLives" type="Node2D" parent="."]
position = Vector2( 0, 1.14441e-05 )
script = ExtResource( 27 )

[node name="Timer" type="Timer" parent="ExtraLives"]
wait_time = 5.0

[node name="ExtraPoints" type="Node2D" parent="."]
position = Vector2( 0, 1.14441e-05 )
script = ExtResource( 29 )

[node name="Timer" type="Timer" parent="ExtraPoints"]
wait_time = 5.0
[connection signal="timeout" from="YSort/Player/AddLife/Timer" to="YSort/Player" method="_on_AddLifeTimer_timeout"]
[connection signal="timeout" from="YSort/Player/AddPoints/Timer" to="YSort/Player" method="_on_Timer_timeout"]
[connection signal="changed" from="YSort/Enemy/EnemyLife" to="YSort/Enemy/EnemyLife" method="_on_EnemyLife_changed"]
[connection signal="timeout" from="YSort/Enemy/BulletSpawner/Timer" to="YSort/Enemy/BulletSpawner" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ExtraLives/Timer" to="ExtraLives" method="_on_Timer2_timeout"]
[connection signal="timeout" from="ExtraPoints/Timer" to="ExtraPoints" method="_on_Timer_timeout"]
